unpackaged/main/default/objects/Competitor_Differentiation_Assessment__c/Competitor_Differentiation_Assessment__c.object-meta.xml
<CustomObject>
    <label>Competitor Differentiation Assessment</label>
    <nameField>
        <displayFormat>CDA-{0000}</displayFormat>
        <label>Competitor Differentiation Assessment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitor Differentiation Assessments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>