unpackaged/main/default/objects/Competitor_Differentiation_Assessment__c/fields/How_are_we_stronger__c.field-meta.xml
<CustomField>
    <fullName>How_are_we_stronger__c</fullName>
    <label>How are we stronger?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>