unpackaged/main/default/objects/Competitor_Differentiation_Assessment__c/fields/How_to_address_our_weakness__c.field-meta.xml
<CustomField>
    <fullName>How_to_address_our_weakness__c</fullName>
    <label>How to address our weakness</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>