unpackaged/main/default/objects/Competitor_Differentiation_Assessment__c/fields/Opportunity_Winner__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Winner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opportunity Winner</label>
    <type>Checkbox</type>
</CustomField>